--- a/style/new_year.css
+++ b/style/new_year.css
@@ -174,6 +174,7 @@ header {
 .footer-paragraph{
     margin-top: 16px;
     line-height: 26px;
+    width: 50%;
 }
 .footer-parent img{
     margin-top: 32px;
@@ -184,6 +185,7 @@ header {
     font-size: 25px;
     color: #fff;
 }
+ 
 input[type="email"]{
     margin-top: 31px;
     background-color: #151414;
@@ -192,5 +194,5 @@ input[type="email"]{
 }
 .footer-btn{
     margin-top: 16px;
-    
+
 }
